--- a/desktop.css
+++ b/desktop.css
@@ -1,7 +1,8 @@
 @media only screen and (min-width:960px) {
     #wrapper{
         width: 100%;
-        height:800px;
+        /* Height is set on the wrapper to make it so that the body fills in the screen */
+        height: 800px;
         margin-left: auto;
         margin-right: auto;
     }
